--- a/index.html
+++ b/index.html
@@ -4,13 +4,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-        <li><a href="recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="recipes/chicken-curry.html">Chicken Curry</a></li>
-        <li><a href="recipes/chocolate-chip-cookies.html">Chocolate Chip Cookies</a></li>
-    </ul>
+    <header>
+        <div class="container">
+            <h1>Odin Recipes</h1>
+            <p class="subtitle">Discover delicious recipes from around the world</p>
+            <div class="search-container">
+                <input type="text" id="recipe-search" placeholder="🔍 Search recipes..." class="search-input">
+            </div>
+        </div>
+    </header>
+
+    <div class="container">
+        <div class="recipe-grid">
+            <div class="recipe-card">
+                <img src="https://images.unsplash.com/photo-1574894709920-11b28e7367e3?w=500" alt="Delicious homemade lasagna">
+                <div class="recipe-content">
+                    <h3 class="recipe-title">Lasagna</h3>
+                    <p class="recipe-description">Classic Italian lasagna with layers of pasta, rich meat sauce, and melted cheese.</p>
+                    <a href="recipes/lasagna.html" class="recipe-link">View Recipe →</a>
+                </div>
+            </div>
+
+            <div class="recipe-card">
+                <img src="https://images.unsplash.com/photo-1565557623262-b51c2513a641?w=500" alt="Spicy chicken curry with rice">
+                <div class="recipe-content">
+                    <h3 class="recipe-title">Chicken Curry</h3>
+                    <p class="recipe-description">Aromatic chicken curry with perfect blend of spices and tender chicken pieces.</p>
+                    <a href="recipes/chicken-curry.html" class="recipe-link">View Recipe →</a>
+                </div>
+            </div>
+
+            <div class="recipe-card">
+                <img src="https://images.unsplash.com/photo-1499636136210-6f4ee915583e?w=500" alt="Freshly baked chocolate chip cookies">
+                <div class="recipe-content">
+                    <h3 class="recipe-title">Chocolate Chip Cookies</h3>
+                    <p class="recipe-description">Classic chocolate chip cookies that are soft on the inside with crispy edges.</p>
+                    <a href="recipes/chocolate-chip-cookies.html" class="recipe-link">View Recipe →</a>
+                </div>
+            </div>
+
+            <div class="recipe-card">
+                <img src="https://images.unsplash.com/photo-1604382354936-07c5d9983bd3?w=500" alt="Fresh Pizza Margherita">
+                <div class="recipe-content">
+                    <h3 class="recipe-title">Pizza Margherita</h3>
+                    <p class="recipe-description">The classic Italian pizza with fresh mozzarella, basil, and tomato sauce.</p>
+                    <a href="recipes/pizza-margherita.html" class="recipe-link">View Recipe →</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="features-section">
+            <h2>✨ Features</h2>
+            <div class="features-grid">
+                <div class="feature-card">
+                    <h3>🔍 Smart Search</h3>
+                    <p>Find recipes quickly with our intelligent search feature</p>
+                </div>
+                <div class="feature-card">
+                    <h3>⏰ Cooking Timer</h3>
+                    <p>Set timers for perfect cooking results every time</p>
+                </div>
+                <div class="feature-card">
+                    <h3>🌙 Dark Mode</h3>
+                    <p>Switch between light and dark themes for comfortable reading</p>
+                </div>
+                <div class="feature-card">
+                    <h3>🖨️ Print Recipes</h3>
+                    <p>Print your favorite recipes for offline cooking</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <button id="dark-mode-toggle" class="fab">🌙</button>
+    <script src="script.js"></script>
 </body>
 </html>
